# const-dispatch.rs

./: Cargo.toml  README.md
.github/workflows/: CI.yml  future-proof.yml
src/: _lib.rs  compile_fail_tests.md  const_dispatch_macro.rs  derive.rs  primitive.rs
src/proc_macros/: Cargo.toml  _mod.rs
tests/: basic.rs  u8.rs
