# Templated by `cargo-generate` using https://github.com/danielhenrymantilla/proc-macro-template
[lib]
path = "src/_lib.rs"

[package]
name = "const-dispatch"
authors = [
    "Daniel Henry-Mantilla <daniel.henry.mantilla@gmail.com>",
]
version = "0.1.0-rc3"  # Keep in sync
edition = "2021"
rust-version = "1.79.0"

license = "Zlib OR MIT OR Apache-2.0"
repository = "https://github.com/danielhenrymantilla/const-dispatch.rs"
documentation = "https://docs.rs/const-dispatch"
readme = "README.md"

description = """\
Static dispatch of small runtime `enum`s into the const/type reälm, to reduce runtime branching\
"""
keywords = [
    "static", "const", "dispatch", "monomorphization", "fast"
]

[features]
default = []

# unstable! Will probably use nightly to improve doc quality
better-docs = []

ui-tests = [
    "better-docs",
]

# `docs-rs` is very similar to `better-docs`, but for it being allowed to enable
# other features as well, often to make sure optional/non-`default` features
# make it to the rendered docs (using `--all-features` instead is not that great).
docs-rs = [
    "better-docs",
]

[dependencies]
never-say-never = "6.6.666"
paste = "1.0.15"

[dependencies.const-dispatch-proc_macros]
path = "src/proc_macros"
version = "=0.1.0-rc3"  # Keep in sync

[dev-dependencies]

[workspace]
members = [
    "src/proc_macros",
]

[package.metadata.docs.rs]
features = [
    "docs-rs",
]
rustdoc-args = [
    # Use (with or without `open`):
    # ```md
    # <details open class="custom"><summary><span class="summary-box"><span>Click to hide</span></span></summary>
    # …
    # </details>
    # ```
    # to get nice drop-down menus (and avoid the css bug with rustdoc).
    "--html-before-content", "fix-docsrs-li-details-summary.html",
]
